--- a/style.css
+++ b/style.css
@@ -60,6 +60,31 @@ ol{
     padding: 12px;
 
 }
+.container-altered-information{
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    padding: 12px;
+    margin-bottom: 0;
+}
+.meuBotao{
+    background-color: mediumpurple;
+    color: black;
+    font-family: "JetBrains Mono", sans-serif;
+    font-size: 12px;
+    border: none;
+    border-radius: 8px;
+    width: 80px;
+    height: 46px;
+    display: block;
+    margin:  0 auto;
+}
+.meuBotao:focus{
+    /*cria uma estilização diferente para quando o campo é selecionado */
+    border-color: #3498db;
+    outline: none;
+    box-shadow: 0 0 0 3px rgba(52, 152, 219, 0.2);
+}
 h1{
     text-align: center;
     font-size: 36px;
