--- a/style.css
+++ b/style.css
@@ -68,8 +68,9 @@ ol{
     margin-bottom: 0;
 }
 .meuBotao{
-    background-color: mediumpurple;
-    color: black;
+    background: linear-gradient(45deg, mediumpurple, rebeccapurple);
+    color: white;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     font-family: "JetBrains Mono", sans-serif;
     font-size: 12px;
     border: none;
@@ -78,6 +79,9 @@ ol{
     height: 46px;
     display: block;
     margin:  0 auto;
+}
+.meuBotao:hover {
+    background: linear-gradient(45deg, rebeccapurple, mediumpurple);
 }
 .meuBotao:focus{
     /*cria uma estilização diferente para quando o campo é selecionado */
@@ -117,6 +121,9 @@ a{
 .container-tecnologias,
 .container-interesses,
 .container-refs {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     margin-top: 20px;
     padding: 10px;
 }
